--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-
+<!-- 
 <html> 
   <head> 
     <title>AhmedHamed</title> 
-    <script src="node_modules/xterm/lib/xterm.js"></script>
-    <link rel="stylesheet" href="node_modules/xterm/css/xterm.css" />
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
     <link rel="stylesheet" type="text/css" href="index.css">
   </head> 
@@ -11,13 +9,23 @@
     <script type="text/javascript" src="index.js"> 
     </script> 
     <div id="console"></div> 
-    <div id="terminal"></div>
+    
+    </script>
+  </body> 
+</html>  -->
+
+<!doctype html>
+  <html>
+    <head>
+      <link rel="stylesheet" href="node_modules/xterm/css/xterm.css" />
+      <script src="node_modules/xterm/lib/xterm.js"></script>
+    </head>
+    <body>
+      <div id="terminal"></div>
       <script>
         var term = new Terminal();
         term.open(document.getElementById('terminal'));
         term.write('Hello from \x1B[1;3;31mxterm.js\x1B[0m $ ')
       </script>
-    
-    </script>
-  </body> 
-</html> 
+    </body>
+  </html>
