--- a/index.html
+++ b/index.html
@@ -14,18 +14,23 @@
   </body> 
 </html>  -->
 
-<!doctype html>
-  <html>
-    <head>
-      <link rel="stylesheet" href="node_modules/xterm/css/xterm.css" />
-      <script src="node_modules/xterm/lib/xterm.js"></script>
-    </head>
-    <body>
-      <div id="terminal"></div>
-      <script>
-        var term = new Terminal();
-        term.open(document.getElementById('terminal'));
-        term.write('Hello from \x1B[1;3;31mxterm.js\x1B[0m $ ')
-      </script>
-    </body>
-  </html>
+<!DOCTYPE html>
+<html>
+  <head>
+   <meta charset="UTF-8">
+   <title>Ahmed Hamed</title>
+   <link rel="stylesheet" href="node_modules/xterm/dist/xterm.css" />
+   <script src="node_modules/xterm/dist/xterm.js"></script>
+  </head>
+
+  <body>
+   <div id = "terminal">
+   </div>
+   <script type = "text/javascript">
+    import { Terminal } from 'xterm';
+    var term = new Terminal();
+    term.open(document.getElementById('terminal'), true);
+    term.fit();
+    term.writeln('Hello World!');
+   </script>
+</html>
